# sunpinyin

./: .gitignore  CMakeLists.txt  TODO  config.h.cmakein  sunpinyin.pc.in
cmake-modules/: FindSqlite3.cmake
data/: CMakeLists.txt
python/plugins/: opencc.py  sunpinyin.py
src/: CMakeLists.txt  portability.h
src/ime-core/: imi_options.h  imi_view_script.cpp  imi_view_script.h  python_plugin.cpp  python_plugin.h
src/pinyin/: pinyin_seg.h
src/slm/: sim_slmbuilder.cpp
src/slm/slmprune/: slmprune.cpp
src/slm/thread/: ValueCompress.cpp
wrapper/gtk_standalone/: CMakeLists.txt  SConstruct
wrapper/gtk_standalone/src/: CMakeLists.txt  imi_gtkwin.cpp  imi_gtkwin.h  sunpinyin.cpp
wrapper/scim/: Makefile.am  configure.ac
wrapper/scim/icons/: Makefile.am
wrapper/scim/po/: POTFILES.in
wrapper/scim/setup/: Makefile.am
wrapper/scim/src/: Makefile.am
