#
# Copyright (c) 2010 Kov Chai <tchaikov@gmail.com>
#

SRC_DIR = $(top_srcdir)/src
SUNPINYIN_USERDATA_DIR_PREFIX = .scim/sunpinyin


# libtool option to control which symbols are exported
# right now, symbols starting with _ are not exported
LIBTOOL_EXPORT_OPTIONS='-export-symbols-regex "^[^_].*"'

SUBDIRS = src setup po
